# manga-api

./: .dockerignore  .env_example  .env_test  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile_frontend  README.md  docker-compose-ci.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .env_test  alembic.ini  pyproject.toml
backend/src/: config.py  main.py
backend/templates/: manga_detail.html  reader.html
backend/tests/: mock_chapters.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx
nginx/: default.conf
src/: config.py  database.py  exceptions.py  main.py
src/api/: auth.py  authors.py  chapters.py  comments.py  dependencies.py  favorites.py  html.py  manga.py  pages.py  purchases_chapters.py  users.py
src/migrations/: env.py
src/models/: __init__.py  chapters.py  comments.py  favorites.py  manga.py  pages.py  refresh_tokens.py  users.py
src/repositories/: authors.py  base.py  chapters.py  comments.py  manga.py  pages.py  purchases_chapters.py  refresh_tokens.py  users.py
src/schemas/: chapters.py  comments.py  favorites.py  filters.py  manga.py  pages.py  read_progress.py  users.py
src/services/: auth.py  authors.py  base.py  chapters.py  comments.py  favorites.py  manga.py  pages.py  purchases_chapters.py  read_progress.py  token.py  users.py  views.py
src/tasks/: celery.py  email.py  tokens.py
templates/: index.html  manga_detail.html  reader.html
tests/: conftest.py  mock_authors.json  mock_manga.json
tools/: prepare_to_upload.py
(+68 files in other folders)
